--- a/src/package.json
+++ b/src/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~3.1.3",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/stack": "^6.3.25",
+    "axios": "^1.6.8",
     "expo": "~50.0.8",
     "expo-barcode-scanner": "~12.9.3",
     "expo-camera": "~14.0.5",
