--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
     "expo-barcode-scanner": "~12.9.3",
     "expo-camera": "~14.0.5",
     "expo-status-bar": "~1.11.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
